# elevation_mapping_cupy

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  documentation.html  genindex.html  index.html  jenkins-pipeline  objects.inv  package.xml  py-modindex.html  requirements.txt  search.html  searchindex.js
cgal5_catkin/: CMakeLists.txt  README.md  package.xml
cgal5_catkin/cmake/: cgal-extras.cmake.in
convex_plane_decomposition/: CMakeLists.txt  package.xml
convex_plane_decomposition/config/: parameters.yaml
convex_plane_decomposition/include/: convex_decomposer.hpp  convex_plane_extraction_ros.hpp  convex_polygon_decomposition.hpp  export_utils.hpp  geometry_utils.hpp  pipeline.hpp  pipeline_ros.hpp  plane.hpp  plane_extractor.hpp  plane_factory.hpp  point_with_normal_container.hpp  polygon.hpp  polygonizer.hpp  ransac_plane_extractor.hpp  ros_visualizations.hpp  sliding_window_plane_extractor.hpp  types.hpp
convex_plane_decomposition/launch/: convex_plane_extraction.launch
convex_plane_decomposition/src/: ConvexRegionGrowing.cpp  GridMapPreprocessing.cpp  PlanarRegion.cpp  Postprocessing.cpp  convex_decomposer.cpp  convex_plane_extraction_node.cpp  convex_plane_extraction_ros.cpp  export_utils.cpp  geometry_utils.cpp  grid_map_preprocessing.cpp  pipeline.cpp  pipeline_ros.cpp  plane.cpp  plane_extractor.cpp  plane_factory.cpp  point_with_normal_container.cpp  polygon.cpp  polygonizer.cpp  ransac_plane_extractor.cpp  ros_visualizations.cpp  sliding_window_plane_extractor.cpp
convex_plane_decomposition/test/: testRegionGrowing.cpp
convex_plane_decomposition_msgs/: CMakeLists.txt  package.xml
convex_plane_decomposition_msgs/msg/: PlanarTerrain.msg
convex_plane_decomposition_ros/: CMakeLists.txt  package.xml
convex_plane_decomposition_ros/config/: convex_plane_decomposition_demo_parameters.yaml  demo_node.yaml  image_loader_demo_parameters.yaml  node.yaml  parameters.yaml  standalone_node.yaml
convex_plane_decomposition_ros/include/: convex_plane_extraction_ros.hpp  grid_map_preprocessing.hpp  pipeline_ros.hpp  ros_visualizations.hpp
convex_plane_decomposition_ros/launch/: convex_plane_decomposition.launch  convex_plane_decomposition_demo.launch  convex_plane_decomposition_save_elevationmap.launch  convex_plane_extraction.launch  convex_plane_extraction_demo.launch  demo.launch
convex_plane_decomposition_ros/rviz/: config.rviz  config_demo.rviz
convex_plane_decomposition_ros/src/: ConvexPlaneDecompositionNode.cpp  ConvexPlaneDecompositionRos.cpp  MessageConversion.cpp  ParameterLoading.cpp  RosVisualizations.cpp  SaveElevationMapAsImageNode.cpp  convex_plane_decomposition_node.cpp  convex_plane_decomposition_ros.cpp  convex_plane_extraction_node.cpp  convex_plane_extraction_ros.cpp  grid_map_preprocessing.cpp  pipeline_ros.cpp  ros_visualizations.cpp
convex_plane_decomposition_ros/test/: test.cpp
elevation_map_msgs/: CMakeLists.txt  package.xml
elevation_map_msgs/msg/: ChannelInfo.msg  FusionInfo.msg  Statistics.msg
elevation_map_msgs/srv/: CheckSafety.srv  Initialize.srv
elevation_mapping_cupy/: CMakeLists.txt  README.md  compile_commands.json  package.xml  setup.cfg  setup.py
elevation_mapping_cupy/config/: anymal_parameters.yaml  anymal_plugin_config.yaml  anymal_semantics.yaml  anymal_sensor_parameter.yaml  heap_parameters.yaml  heap_sensor_parameter.yaml  image_semantic_sensor_parameter.yaml  image_semantics.yaml  lonomy_parameters.yaml  lonomy_plugin_config.yaml  lonomy_sensor_parameter.yaml  map2_parameter.yaml  parameters.yaml  plugin_config.yaml  semantic_image_sensor_parameter.yaml  semantic_parameters.yaml  semantic_sensor_parameter.yaml  sensor_parameter.yaml  sim_parameters.yaml  sim_sensor_parameter.yaml  weights.yaml
elevation_mapping_cupy/elevation_mapping_cupy/: __init__.py  elevation_mapping.py  elevation_mapping_node.py  elevation_mapping_ros.py  listener_test.py  parameter.py  semantic_map.py  traversability_polygon.py
elevation_mapping_cupy/launch/: anymal.launch  anymal.launch.py  anymal_semantic_elevation_single.launch  elevation_mapping.launch.py  elevation_mapping_cupy.launch  elevation_mapping_cupy.launch.py  elevation_mapping_launch.py  elevation_mapping_turtle.launch.py  heap_launch.launch  lonomy_pointcloud.launch  lonomy_semantic_elevation_single.launch  semantic_elevation_anymal.launch  semantic_elevation_lonomy_single.launch  sim_semantic_elevation_single.launch  turtle_simple_example.launch.py  turtlesim_example.launch  turtlesim_features_image_example.launch  turtlesim_init.launch  turtlesim_init.launch.py  turtlesim_plane_decomposition_example.launch  turtlesim_plane_decomposition_example.launch.py  turtlesim_pointcloud.launch  turtlesim_segmentation_example.launch  turtlesim_semantic_elevation.launch  turtlesim_semantic_example.launch  turtlesim_semantic_image_example.launch  turtlesim_semantic_image_example.launch.py  turtlesim_semantic_pointcloud_example.launch  turtlesim_semantic_pointcloud_example.launch.py  turtlesim_simple_example.launch
elevation_mapping_cupy/rviz/: anymal.rviz  heap.rviz  lonomy_single.rviz  turtle_example.rviz  turtle_features_example.rviz  turtle_segmentation_example.rviz  turtle_semantic_example.rviz  turtle_sim_laser.rviz
elevation_mapping_cupy/script/: custom_kernels.py  elevation_mapping.py  map_initializer.py  parameter.py  traversability_filter.py  traversability_polygon.py
elevation_mapping_cupy/scripts/: elevation_mapping_node.py
elevation_mapping_cupy/src/: elevation_mapping_node.cpp  elevation_mapping_ros.cpp  elevation_mapping_wrapper.cpp
loco_perception_ros/: CMakeLists.txt  package.xml
loco_perception_ros/src/: ConvexSetSequence.cpp
pcl_catkin/: CMakeLists.txt  README.md  package.xml
pcl_catkin/cmake/: pcl-extras.cmake.in
plane_segmentation/cgal5_ament/: CMakeLists.txt  README.md  package.xml
plane_segmentation/convex_plane_decomposition/: CMakeLists.txt  package.xml
segmented_planes_terrain_model/: CMakeLists.txt  package.xml
signed_distance_field/: CMakeLists.txt  package.xml
(+354 files in other folders)
