<?xml version="1.0"?>
<package format="2">
  <name>grid_map_filters_rsl</name>
  <version>0.1.0</version>
  <description>Extension of grid map filters package with op-cv filters and others</description>
  <maintainer email="fabian.jenelten@mavt.ethz.ch">Fabian Jenelten</maintainer>
  <license>Proprietary</license>
  <url type="website">http://bitbucket.org/leggedrobotics/anymal_rsl_locomotion</url>
  <author email="fabian.jenelten@mavt.ethz.ch">Fabian Jenelten</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>
  <depend>robot_utils</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_core</depend>
  <depend>message_logger</depend>
</package>
