<?xml version="1.0"?>
<package format="2">
  <name>cgal5_catkin</name>
  <version>5.0.2</version>
  <description>Catkin wrapper for CGAL 5.</description>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>libgmp-dev</exec_depend>  <!-- required for the buildserver -->
  <exec_depend>libmpfr-dev</exec_depend>  <!-- required for the buildserver -->
</package>
