<?xml version="1.0"?>
<package format="2">
  <name>convex_plane_decomposition</name>
  <version>0.0.0</version>
  <description>The convex_plane_decomposition package</description>

  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cgal5_catkin</depend>
  <depend>grid_map_core</depend>
  <depend>ocs2_switched_model_interface</depend>


</package>
