<?xml version="1.0"?>
<package format="2">
    <name>convex_plane_extraction_ros</name>
    <version>0.0.0</version>
    <description>The convex_plane_extraction_ros package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="andrej@todo.todo">andrej</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>grid_map_core</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_cv</depend>
    <depend>grid_map_filters</depend>
    <depend>grid_map_loader</depend>
    <depend>grid_map_msgs</depend>
    <depend>grid_map_octomap</depend>
    <depend>grid_map_rviz_plugin</depend>
    <depend>grid_map_visualization</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>convex_plane_extraction</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>