<?xml version="1.0"?>
<package format="2">
    <name>convex_plane_decomposition_ros</name>
    <version>0.0.0</version>
    <description>The convex_plane_decomposition_ros package</description>

    <maintainer email="andrej@todo.todo">andrej</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>grid_map_core</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_cv</depend>
    <depend>grid_map_filters</depend>
    <depend>grid_map_loader</depend>
    <depend>grid_map_msgs</depend>
    <depend>grid_map_octomap</depend>
    <depend>grid_map_rviz_plugin</depend>
    <depend>grid_map_visualization</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>jsk_recognition_msgs</depend>
    <depend>convex_plane_decomposition</depend>

</package>
