<?xml version="1.0"?>
<package format="3">
    <name>elevation_map_msgs</name>
    <version>0.0.0</version>
    <description>ROS 2 Message definitions for elevation mapping.</description>
    <maintainer email="takahiro.miki1992@gmail.com">Takahiro Miki</maintainer>
    <author email="takahiro.miki1992@gmail.com">Takahiro Miki</author>
    <license>MIT</license>

    <!-- Build and Runtime Dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <build_depend>geometry_msgs</build_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <build_depend>std_msgs</build_depend>
    
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <!-- Testing Dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <member_of_group>rosidl_interface_packages</member_of_group>
    </export>
</package>
