<?xml version="1.0"?>
<package format="2">
  <name>loco_perception_ros</name>
  <version>0.2.0</version>
  <description>The loco_perception_ros package</description>
  <maintainer email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</maintainer>
  <license>Proprietary</license>
  <url type="website">https://bitbucket.org/leggedrobotics/loco_anymal_wheels</url>
  <author email="marko.bjelonic@mavt.ethz.ch">Marko Bjelonic</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>loco_ros</depend>
  <depend>loco_perception_utils</depend>
</package>
